--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 					<ul class="icons">
 						<li><a href="https://www.linkedin.com/in/husni-sabah-19527416a" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/sano84" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:husnins@mail.com" class="icon solid fa-envelope-open"><span class="label">Email</span></a></li>
 					</ul>
 					<!-- / being said -->
 					<ul class="copyright">
