--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 										<img src="images/16.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									  <div class="column">
-										<img src="images/17.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+										<img src="images/17.png" alt="Lights" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									</div>
 									
