--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image myphoto"><img src="images/myphoto.jpg" alt="" /></a>
-					<h1><strong>I am Husni Sabah</strong>, a GIS enthusiast<br />
+					<h1><strong>I am Husni Sabah</strong>, a GIS enthusiast,<br />
 					love geography, maps and nature. I <br />
 					am interested in data analysis. <br />
 					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
@@ -111,55 +111,52 @@
 									<!-- The four columns -->
 									<div class="row">
 									  <div class="column">
-										<img src="images/01.jpg" alt="Nature" style="width:100%" onclick="myFunction(this);">
+										<img src="images/01.jpg" alt="Ozone Concentrations" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									  <div class="column">
-										<img src="images/02.jpg" alt="Snow" style="width:100%" onclick="myFunction(this);">
+										<img src="images/02.jpg" alt="Landslide" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									  <div class="column">
-										<img src="images/03.png" alt="Mountains" style="width:100%" onclick="myFunction(this);">
+										<img src="images/03.png" alt="Populated Cities" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									  <div class="column">
-										<img src="images/04.png" alt="Lights" style="width:100%" onclick="myFunction(this);">
+										<img src="images/04.png" alt="Martime Piracy" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									  <div class="column">
-										<img src="images/05.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+										<img src="images/05.jpg" alt="Missed Collection Location" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									  <div class="column">
-										<img src="images/06.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+										<img src="images/06.jpg" alt="Soil Drainage" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									  <div class="column">
-										<img src="images/07.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+										<img src="images/07.jpg" alt="Cogour Potential Habitat" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									  <div class="column">
-										<img src="images/08.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+										<img src="images/08.jpg" alt="Mixed-used Development" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									  <div class="column">
-										<img src="images/09.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+										<img src="images/09.jpg" alt="Streams with glazing allotment" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									  <div class="column">
-										<img src="images/10.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+										<img src="images/10.jpg" alt="Deforestation" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									  <div class="column">
-										<img src="images/11.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+										<img src="images/11.jpg" alt="Popuation Density" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									  <div class="column">
-										<img src="images/12.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+										<img src="images/13.jpg" alt="Cherry Trees" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									  <div class="column">
-										<img src="images/13.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+										<img src="images/14.jpg" alt="Demography" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									  <div class="column">
-										<img src="images/14.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+										<img src="images/15.jpg" alt="watershedd Analysis" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									  <div class="column">
-										<img src="images/15.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
+										<img src="images/16.jpg" alt="Marbled Murrelet" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									  <div class="column">
-										<img src="images/16.jpg" alt="Lights" style="width:100%" onclick="myFunction(this);">
-									  </div>
-									  <div class="column">
-										<img src="images/17.png" alt="Lights" style="width:100%" onclick="myFunction(this);">
+										<img src="images/17.png" alt="Network Analysis" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									</div>
 									
