--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<a href="#" class="image myphoto"><img src="images/myphoto.jpg" alt="" /></a>
 					<h1><strong>I am Husni Sabah</strong>, a GIS enthusiast,<br />
 					love geography, maps and nature. I <br />
-					am interested in data analysis. <br />
+					am interested in GIS & data analysis. <br />
 					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
 				</div>
 			</header>
