update New Maps

--- a/index.html
+++ b/index.html
@@ -158,6 +158,18 @@
 									  <div class="column">
 										<img src="images/17.png" alt="Network Analysis" style="width:100%" onclick="myFunction(this);">
 									  </div>
+									  <div class="column">
+										<img src="images/18.jpg" alt="Aridity" style="width:100%" onclick="myFunction(this);">
+									  </div>
+									  <div class="column">
+										<img src="images/19.jpg" alt="Global Climate" style="width:100%" onclick="myFunction(this);">
+									  </div>
+									  <div class="column">
+										<img src="images/20.jpg" alt="Major Habitat" style="width:100%" onclick="myFunction(this);">
+									  </div>
+									  <div class="column">
+										<img src="images/21.jpg" alt="Population Density Pressure" style="width:100%" onclick="myFunction(this);">
+									  </div>
 									</div>
 									
 									<div class="container">
