--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image myphoto"><img src="images/myphoto.jpg" alt="" /></a>
+					<a href="#" class="image myphoto"><img src="images/myphoto.jfif" alt="" /></a>
 					<h1><strong>I am Husni Sabah</strong>, a GIS enthusiast,<br />
 					love geography, maps and nature. I <br />
 					am interested in GIS & data analysis. <br />
@@ -169,6 +169,21 @@
 									  </div>
 									  <div class="column">
 										<img src="images/21.jpg" alt="Population Density Pressure" style="width:100%" onclick="myFunction(this);">
+									  </div>
+									  <div class="column">
+										<img src="images/22.png" alt="Mapping Poverty in Florida with Centroids" style="width:100%" onclick="myFunction(this);">
+									  </div>
+									  <div class="column">
+										<img src="images/23.png" alt="Percent of population classified as poor in Florida in 1990" style="width:100%" onclick="myFunction(this);">
+									  </div>
+									  <div class="column">
+										<img src="images/24.png" alt="Homicie multi-panel classification methods in United states" style="width:100%" onclick="myFunction(this);">
+									  </div>
+									  <div class="column">
+										<img src="images/25.png" alt="Percent of population classified as poor in Pennsylvania in 1990" style="width:100%" onclick="myFunction(this);">
+									  </div>
+									  <div class="column">
+										<img src="images/26.png" alt="Homicide rates in the states of US" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									</div>
 									
