update photo and description

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="inner">
 					<a href="#" class="image myphoto"><img src="images/myphoto.jfif" alt="" /></a>
 					<h1><strong>I am Husni Sabah</strong>, a GIS enthusiast,<br />
-					love geography, maps and nature. I <br />
+					love maps and geography. I  <br />
 					am interested in GIS & data analysis. <br />
 					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
 				</div>
@@ -35,6 +35,7 @@
 						<p> - MSc in Plant Science, Utah State University <br />
 							- BSc in Agriculture, American University of Beirut <br />
 							- Data Analysis with R, Datacamp <br />
+							- Data Analyst with SQL Server <br>/>
 							- Geographic Information system Specialization, University of Davis <br />
 							- GIS, Mapping and Spatial Analysis Specialization, University of Toronto <br />
 							- Data Science Fundamentals with Python and SQL Specialization, IBM</p>
