--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 						<p> - MSc in Plant Science, Utah State University <br />
 							- BSc in Agriculture, American University of Beirut <br />
 							- Data Analysis with R, Datacamp <br />
-							- Data Analyst with SQL Server <br>/>
+							- Data Analyst with SQL Server <br />
 							- Geographic Information system Specialization, University of Davis <br />
 							- GIS, Mapping and Spatial Analysis Specialization, University of Toronto <br />
 							- Data Science Fundamentals with Python and SQL Specialization, IBM</p>
