--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image myphoto"><img src="images/myphoto.jfif" alt="" /></a>
-					<h1><strong>I am Husni Sabah</strong>, a GIS enthusiast,<br />
-					love maps and geography. I  <br />
-					am interested in GIS & data analysis. <br />
+					<h1><strong>I am Husni Sabah</strong>,<br />
+						        a GIS enthusiast,<br />
+					            love maps and geography. I  <br />
+					            am interested in GIS & data <br />
+								analysis. <br />
 					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
 				</div>
 			</header>
@@ -35,7 +37,7 @@
 						<p> - MSc in Plant Science, Utah State University <br />
 							- BSc in Agriculture, American University of Beirut <br />
 							- Data Analysis with R, Datacamp <br />
-							- Data Analyst with SQL Server <br />
+							- Data Analyst with SQL Server, Datacamp <br />
 							- Geographic Information system Specialization, University of Davis <br />
 							- GIS, Mapping and Spatial Analysis Specialization, University of Toronto <br />
 							- Data Science Fundamentals with Python and SQL Specialization, IBM</p>
