--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 										<img src="images/24.png" alt="Homicide multi-panel classification methods in United states" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									  <div class="column">
-										<img src="images/25.png" alt="Percent of population classified as poor in Pennsylvania in 1990" style="width:100%" onclick="myFunction(this);">
+										<img src="images/25.png" alt="Percent of population classified poor" style="width:100%" onclick="myFunction(this);">
 									  </div>
 									  <div class="column">
 										<img src="images/26.png" alt="Homicide rates in the states of US" style="width:100%" onclick="myFunction(this);">
