--- a/index.html
+++ b/index.html
@@ -188,6 +188,21 @@
 									  <div class="column">
 										<img src="images/26.png" alt="Homicide rates in the states of US" style="width:100%" onclick="myFunction(this);">
 									  </div>
+									  <div class="column">
+										<img src="images/27.png" alt="Homicide rates in the states of US" style="width:100%" onclick="myFunction(this);">
+									  </div>
+									  <div class="column">
+										<img src="images/28.png" alt="Homicide rates in the states of US" style="width:100%" onclick="myFunction(this);">
+									  </div>
+									  <div class="column">
+										<img src="images/29.png" alt="Homicide rates in the states of US" style="width:100%" onclick="myFunction(this);">
+									  </div>
+									  <div class="column">
+										<img src="images/30.png" alt="Homicide rates in the states of US" style="width:100%" onclick="myFunction(this);">
+									  </div>
+									  <div class="column">
+										<img src="images/31.png" alt="Homicide rates in the states of US" style="width:100%" onclick="myFunction(this);">
+									  </div>									  
 									</div>
 									
 									<div class="container">
