update adding imaged 32 to 36

--- a/index.html
+++ b/index.html
@@ -202,7 +202,22 @@
 									  </div>
 									  <div class="column">
 										<img src="images/31.png" alt="Homicide rates in the states of US" style="width:100%" onclick="myFunction(this);">
-									  </div>									  
+									  </div>
+									  <div class="column">
+										<img src="images/32.png" alt="Homicide rates in the states of US" style="width:100%" onclick="myFunction(this);">
+									  </div>
+									  <div class="column">
+										<img src="images/33.png" alt="Homicide rates in the states of US" style="width:100%" onclick="myFunction(this);">
+									  </div>
+									  <div class="column">
+										<img src="images/34.png" alt="Homicide rates in the states of US" style="width:100%" onclick="myFunction(this);">
+									  </div>
+									  <div class="column">
+										<img src="images/35.png" alt="Homicide rates in the states of US" style="width:100%" onclick="myFunction(this);">
+									  </div>
+									  <div class="column">
+										<img src="images/36.png" alt="Homicide rates in the states of US" style="width:100%" onclick="myFunction(this);">
+									  </div>							  
 									</div>
 									
 									<div class="container">
