--- a/index.html
+++ b/index.html
@@ -217,6 +217,15 @@
 									  </div>
 									  <div class="column">
 										<img src="images/36.png" alt="Homicide rates in the states of US" style="width:100%" onclick="myFunction(this);">
+									  </div>
+									  <div class="column">
+										<img src="images/37.png" alt="Homicide rates in the states of US" style="width:100%" onclick="myFunction(this);">
+									  </div>
+									  <div class="column">
+										<img src="images/38.png" alt="Homicide rates in the states of US" style="width:100%" onclick="myFunction(this);">
+									  </div>
+									  <div class="column">
+										<img src="images/39.png" alt="Homicide rates in the states of US" style="width:100%" onclick="myFunction(this);">
 									  </div>							  
 									</div>
 									
