--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
 				<div class="inner">
 					<a href="#" class="image myphoto"><img src="images/myphoto.jfif" alt="" /></a>
 					<h1><strong>I am Husni Sabah</strong>,<br />
-						        a GIS enthusiast,<br />
-					            love maps and geography. I  <br />
-					            am interested in GIS & data <br />
-								analysis. <br />
+						        love maps and geography. 
 					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
 				</div>
 			</header>
@@ -36,11 +33,8 @@
 						</header>
 						<p> - MSc in Plant Science, Utah State University <br />
 							- BSc in Agriculture, American University of Beirut <br />
-							- Data Analysis with R, Datacamp <br />
-							- Data Analyst with SQL Server, Datacamp <br />
 							- Geographic Information system Specialization, University of Davis <br />
 							- GIS, Mapping and Spatial Analysis Specialization, University of Toronto <br />
-							- Data Science Fundamentals with Python and SQL Specialization, IBM</p>
 							<head>
 								<head>
 									<meta name="viewport" content="width=device-width, initial-scale=1">
