--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image myphoto"><img src="images/myphoto.jfif" alt="" /></a>
-					<h1><strong>I am Husni Sabah</strong>,<br />
-						        love maps and geography. 
+					<h1><strong>I am Husni Sabah</strong>,<br>
+						    love maps and geography.<br> 
 					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
 				</div>
 			</header>
