--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 	<head>
 		<title>Strata by HTML5 UP</title>
 		<meta charset="utf-8" />
+		<meta charset="UTF-8">
+  		<meta name="description" content="Maps">
+  		<meta name="keywords" content="QGIS, ArcGIS">
+  		<meta name="author" content="Husni Sabah">  		
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
