--- a/index.html
+++ b/index.html
@@ -20,13 +20,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image myphoto"><img src="images/myphoto.jfif" alt="" /></a>
-<<<<<<< HEAD
-					<h1><strong>I am Husni Sabah</strong>,<br />
-						        love maps and geography.
-=======
-					<h1><strong>I am Husni Sabah</strong>,<br>
-						    love maps and geography.
->>>>>>> 0d87a2ce0e937fc580a380ae32d5204744b662bd
+
+					<h1><strong>I am Husni Sabah</strong><br/>
+						        love maps and geography.					
 					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
 				</div>
 			</header>
