--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<a href="#" class="image myphoto"><img src="images/myphoto.jfif" alt="" /></a>
 
 					<h1><strong>I am Husni Sabah</strong><br/>
-						        love maps and geography.					
+						        love geographic information systems					
 					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
 				</div>
 			</header>
