--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>		
+		<title>Husni Sabah</title>		
 		<meta charset="UTF-8">
   		<meta name="description" content="Maps">
   		<meta name="keywords" content="QGIS, ArcGIS">
@@ -21,9 +21,9 @@
 				<div class="inner">
 					<a href="#" class="image myphoto"><img src="images/myphoto.jfif" alt="" /></a>
 
-					<h1><strong>I am Husni Sabah</strong><br/>
-						        love geographic information system					
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<h1>My name is <strong>Husni Sabah</strong> and I love GIS. 
+						
+						<!-- Crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1> -->
 				</div>
 			</header>
 
